TTL management. Reconnection Logic.